some additional ie fixes - still renders somewhat strangely on ie6
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@547 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/item_display_ie6.css
+++ b/theme/default/item_display_ie6.css
@@ -1,9 +1,10 @@
 ul.sitepluginLinks
 {
-	width: 90%;
+	
 }
 
 ul.names li
 {
 	white-space: nowrap;
 }
+
