--- a/theme/default/style.css
+++ b/theme/default/style.css
@@ -192,6 +192,7 @@ ul.footer-links li
 	padding-top: 0px;
 	padding-bottom: 0px;
 	margin: 0px;
+	white-space: no
 }
 
 ul.footer-links li.first
