--- a/theme/default/style_ie.css
+++ b/theme/default/style_ie.css
@@ -4,3 +4,9 @@
     right: 0px;
     white-space: nowrap;
 }
+
+ul.footer-links li
+{
+    white-space: nowrap;
+}
+
